--- a/parser/CMakeLists.txt
+++ b/parser/CMakeLists.txt
@@ -1,36 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(caff_parser VERSION 0.1.0)
 
-include_directories(include)
-file(GLOB SOURCES "source/*.c")
-add_executable(caff_parser ${SOURCES})
-
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
-
-# Gtest 
-set(CMAKE_C_STANDARD 11)
-
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-enable_testing()
-
-add_executable(
-  hello_test
-  "tests/hello_test.cc"
-)
-target_link_libraries(
-  hello_test
-  GTest::gtest_main
-)
-
-include(GoogleTest)
-gtest_discover_tests(hello_test)
+add_subdirectory(demo)
+add_subdirectory(caff_parser)
+add_subdirectory(tests)
