shared library creation attempt

--- a/parser/caff_parser/CMakeLists.txt
+++ b/parser/caff_parser/CMakeLists.txt
@@ -1,5 +1,8 @@
 # Create a library
-add_library(caff_parser reader.c lexer.c)
+SET(lib_sources reader.c lexer.c)
+add_library(caff_parser_static ${lib_sources})
+
+add_library(caff_parser_shared SHARED ${lib_sources})
 
 # Make it available for linking
-target_include_directories (caff_parser PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(caff_parser_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
