--- a/parser/demo/CMakeLists.txt
+++ b/parser/demo/CMakeLists.txt
@@ -2,4 +2,4 @@
 add_executable (parser_demo main.c)
 
 # Link the executable to the caff_parser library
-target_link_libraries(parser_demo LINK_PUBLIC caff_parser)
+target_link_libraries(parser_demo LINK_PUBLIC caff_parser_static)
