modified structure, added tester.py

--- a/parser/CMakeLists.txt
+++ b/parser/CMakeLists.txt
@@ -4,8 +4,5 @@ project(caff_parser VERSION 0.1.0)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 
-option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
-
-add_subdirectory(demo)
 add_subdirectory(caff_parser)
-#add_subdirectory(tests)
+add_subdirectory(tests)
