reader peek tests ok

--- a/parser/caff_parser/CMakeLists.txt
+++ b/parser/caff_parser/CMakeLists.txt
@@ -2,7 +2,8 @@
 SET(lib_sources reader.c lexer.c parser.c)
 add_library(caff_parser_static ${lib_sources})
 
-add_library(caff_parser_shared SHARED ${lib_sources})
-
 # Make it available for linking
 target_include_directories(caff_parser_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Create a sharad library as well
+add_library(caff_parser_shared SHARED ${lib_sources})
