--- a/parser/tests/CMakeLists.txt
+++ b/parser/tests/CMakeLists.txt
@@ -21,6 +21,11 @@ add_executable(lexer_test "lexer_test.cc")
 target_include_directories(lexer_test PRIVATE caff_parser)
 target_link_libraries(lexer_test GTest::gtest_main caff_parser_static)
 
+add_executable(parser_test "parser_test.cc")
+target_include_directories(parser_test PRIVATE caff_parser)
+target_link_libraries(parser_test GTest::gtest_main caff_parser_static)
+
 include(GoogleTest)
 gtest_discover_tests(reader_test)
 gtest_discover_tests(lexer_test)
+gtest_discover_tests(parser_test)
